syntax = "proto3";
package api;

service Api {
  rpc Append(AppendReq) returns (AppendResp);
  rpc Read(ReadReq) returns (stream ReadResp);
  rpc Ping(Empty) returns (Empty);
  rpc Status(Empty) returns (StatusResp);
}

message Empty {}

message AppendReq {
  string stream_id = 1;
  repeated bytes events = 2;
}

message AppendResp {
  uint64 position = 1;
}

message ReadReq {
  string stream_id = 1;
}

message ReadResp {
  string stream_id = 1;
  uint64 global = 2;
  uint64 revision = 3;
  bytes payload = 4;
}

message StatusResp {
  string host = 1;
  uint32 port = 2;
  string status = 3;
  uint64 term = 4;
  uint64 log_index = 5;
  uint64 global = 6;
  string leader_host = 7;
  uint32 leader_port = 8;
}