syntax = "proto3";
package consensus;

service Raft {
  rpc RequestVote(VoteReq) returns (VoteResp);
  rpc AppendEntries(EntriesReq) returns (EntriesResp);
}

message VoteReq {
  uint64 term = 1;
  string candidate_id = 2;
  uint64 last_log_index = 3;
  uint64 last_log_term = 4;
}

message VoteResp {
  uint64 term = 1;
  bool vote_granted = 2;
}

message EntriesReq {
  uint64 term = 1;
  string leader_id = 2;
  uint64 prev_log_index = 3;
  uint64 prev_log_term = 4;
  uint64 leader_commit = 5;
  repeated bytes entries = 6;
}

message EntriesResp {
  uint64 term = 1;
  bool success = 2;
}